--- a/gallery.html
+++ b/gallery.html
@@ -39,17 +39,18 @@
    <h2>
     Gallery
    </h2>
-   <a data-lightbox="project-gallery" data-title="New 18' x 15 x 7'6&quot; shed" href="Images/shed.jpg">
-    <img alt="Shed view" src="Images/shed.jpg" style="width: 200px; margin: 10px;"/>
-   </a>
-   <p>
+  <a data-lightbox="project-gallery" data-title="New 18' x 15 x 7'6&quot; shed" href="Images/shed.jpg">
+  <img alt="Shed view" src="Images/shed.jpg" style="width: 200px; margin: 10px;" />
+  </a>
+  <p>
     New 18' x 15' x 7'6" shed with an 18’ x 18’ x 18” concrete foundation and a 20’ x 25’ x 6” concrete deck
-   </p>
-   <a data-lightbox="project-gallery" data-title="New 18' x 15 x 7'6&quot; shed" href="Images/shed2.jpg">
-    <img alt="Side view of the shed" src="Images/shed2.jpg" style="width: 200px; margin: 10px;"/>
+  </p>
+
+   <a data-lightbox="project-gallery" data-title="New shed side" href="Images/shed2.jpg">
+   <img alt="Side view of the shed" src="Images/shed2.jpg" style="width: 200px; margin: 10px;" />
    </a>
    <p>
-    Left side view of the same shed project
+     Left side view of the same shed project
    </p>
    <a data-lightbox="project-gallery" data-title="Test Image 1" href="Images/1.jpg">
     <img alt="Test Image 1" src="Images/1.jpg" style="width: 200px; margin: 10px;"/>
