--- a/about.html
+++ b/about.html
@@ -3,69 +3,27 @@
  <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   About Us | ELI MAS Construction Inc – NYC Licensed &amp; Insured Contractor
-  </title>
-  <meta content="Learn more about ELI MAS Construction Inc — a trusted, licensed, and insured NYC contractor with decades of   experience in home improvement and construction projects throughout all five boroughs." name="description"/>
-  services since 2005."&gt;
+  <title>About Us | ELI MAS Construction Inc – NYC Licensed &amp; Insured Contractor</title>
+  <meta content="Learn more about ELI MAS Construction Inc — a trusted, licensed, and insured NYC contractor with decades of experience in home improvement and construction projects throughout all five boroughs." name="description"/>
   <link href="css/style.css" rel="stylesheet"/>
  </head>
  <body>
   <header>
-   <h1>
-    ELI MAS CONSTRUCTION INC
-   </h1>
-   <p>
-    Licensed &amp; Insured NYC Home Improvement Contractor
-   </p>
-   <p>
-    ¡Hablamos Español!
-   </p>
-   <div class="hamburger" onclick="toggleMenu()">
-    <div>
-    </div>
-    <div>
-    </div>
-    <div>
-    </div>
-   </div>
+   <h1>ELI MAS CONSTRUCTION INC</h1>
+   <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
+   <p>¡Hablamos Español!</p>
   </header>
-  <div style="padding: 10px;">
-   <a href="index.html">
-    ← Back to Home
-   </a>
-  </div>
   <section>
-   <h2>
-    About Us
-   </h2>
-   <p>
-    <strong>
-     ELI MAS Construction, Inc.
-    </strong>
-    was founded by Eliseo Camas Agualema, who started his journey in the trades as a young man. Originally established in 2005 as J.B.C. Construction, the company has grown into a trusted name in New York City construction.
-   </p>
-   <p>
-    Built on a foundation of hard work, skill, and reliability, our mission is to deliver high-quality home improvement services with honesty and care.
-   </p>
-   <p>
-    We specialize in concrete sidewalks and driveways, masonry, paver installations, and in-home renovations tailored to our clients' needs.
-   </p>
-   <p>
-    Proudly serving residential, commercial, and public clients across all five boroughs of New York City.
-   </p>
+   <h2>About Us</h2>
+   <p><strong>ELI MAS Construction, Inc.</strong> was founded by Eliseo Camas Agualema, who started his journey in the trades as a young man. Originally established in 2005 as J.B.C. Construction, the company has grown into a trusted name in New York City construction.</p>
+   <p>Built on a foundation of hard work, skill, and reliability, our mission is to deliver high-quality home improvement services with honesty and care.</p>
+   <p>We specialize in concrete sidewalks and driveways, masonry, paver installations, and in-home renovations tailored to our clients' needs.</p>
+   <p>Proudly serving residential, commercial, and public clients across all five boroughs of New York City.</p>
   </section>
-  <p>
-   <a class="button" href="index.html">
-    ← Back to Home
-   </a>
-  </p>
+  <p><a class="button" href="index.html">← Back to Home</a></p>
   <footer>
-   <p>
-    © 2025 ELI MAS CONSTRUCTION INC. All rights reserved.
-   </p>
+   <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
   </footer>
-  <script src="js/script.js">
-  </script>
+  <script src="js/script.js"></script>
  </body>
 </html>
