--- a/Sheds.html
+++ b/Sheds.html
@@ -14,23 +14,9 @@
     <p>¡Hablamos Español!</p>
   </header>
 
-  <nav>
-    <ul class="nav-links" id="navLinks">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-  <section>
-    section>
-  <section>
-<section>
+   <section>
   <h2>Shed Construction & Repair</h2>
-
-  <p><strong>Custom Shed Construction:</strong> We build sheds tailored to your size, style, and storage needs using quality materials.</p>
+  <p><strong>Custom Shed Construction:</strong> We build sheds tailored to your size, style, and storage needs using      quality materials.</p>
 
   <p><strong>Shed Repair & Restoration:</strong> Repair services for aging or damaged sheds, including roof, siding, and structural reinforcement.</p>
 
@@ -43,10 +29,12 @@
   <p><strong>Insulation Services:</strong> Add insulation to your shed for year-round temperature control and improved comfort.</p>
 
   <p><strong>Custom Shelving:</strong> Maximize storage with built-in or wall-mounted shelves designed for efficiency and access.</p>
-</section>
-
-<p><a href="services.html" class="button">← Back to Services</a></p>
-
+ </section>
+  <p>
+   <a class="button" href="services.html">
+    ← Back to Services
+   </a>
+  </p>
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
   </footer>
