--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact Us | ELI MAS Construction Inc – NYC Licensed Contractor</title>
-  <meta name="description" content="Contact ELI MAS Construction Inc — a licensed and insured NYC contractor serving all 5 boroughs. Call 914-755-6641 or visit us at 1204 Boynton Ave, Bronx, NY to request your free estimate.">
+  <meta name="description" content="Contact ELI MAS Construction Inc — a licensed and insured NYC contractor serving all 5 boroughs. Call 914-755-6641 or visit us at 1204 Boynton Ave, Bronx, NY." />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -14,35 +14,34 @@
     <p>¡Hablamos Español!</p>
   </header>
 
-  
   <main>
     <section>
-  <table>
-    <tr><th colspan="2">Business Hours</th></tr>
-    <tr><td>Monday:</td><td>8 AM to 5 PM</td></tr>
-    <tr><td>Tuesday:</td><td>8 AM to 5 PM</td></tr>
-    <tr><td>Wednesday:</td><td>8 AM to 5 PM</td></tr>
-    <tr><td>Thursday:</td><td>8 AM to 5 PM</td></tr>
-    <tr><td>Friday:</td><td>8 AM to 5 PM</td></tr>
-    <tr><td>Saturday:</td><td>8 AM to 5 PM</td></tr>
-    <tr><td>Sunday:</td><td>Closed</td></tr>
-  </table>
+      <table style="border-collapse: collapse; width: auto; margin-bottom: 20px;">
+        <tr><th colspan="2" style="text-align: left; font-weight: bold;">Business Hours</th></tr>
+        <tr><td style="padding-right: 10px; white-space: nowrap;">Monday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+        <tr><td style="padding-right: 10px; white-space: nowrap;">Tuesday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+        <tr><td style="padding-right: 10px; white-space: nowrap;">Wednesday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+        <tr><td style="padding-right: 10px; white-space: nowrap;">Thursday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+        <tr><td style="padding-right: 10px; white-space: nowrap;">Friday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+        <tr><td style="padding-right: 10px; white-space: nowrap;">Saturday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+        <tr><td style="padding-right: 10px; white-space: nowrap;">Sunday:</td><td style="white-space: nowrap;">Closed</td></tr>
+      </table>
+    </section>
 
-
+    <section>
       <h2>Contact Info</h2>
       <p><strong>📞 Phone:</strong> <a href="tel:9147556641">914-755-6641</a></p>
+      <p><strong>📍 Address:</strong>
+        <a href="https://www.google.com/maps/place/1204+Boynton+Ave,+Bronx,+NY+10472" target="_blank">
+          1204 Boynton Ave., Bronx, NY 10472
+        </a>
+      </p>
+      <p><strong>License #:</strong> <a href="https://a866-dcwpbp.nyc.gov/search" target="_blank">2083303-DCA (NYC)</a></p>
+      <p><em>(To verify license, enter “2083303-DCA” in the NYC DCA search box)</em></p>
+    </section>
 
-  <p><strong>📍 Address:</strong>
-    <a href="https://www.google.com/maps/place/1204+Boynton+Ave,+Bronx,+NY+10472" target="_blank">
-      1204 Boynton Ave., Bronx, NY 10472
-    </a>
-  </p>
-
-<p><strong>License #:</strong> <a href="https://a866-dcwpbp.nyc.gov/search" target="_blank">2083303-DCA (NYC)</a></p>
-<p><em>(To verify license, enter “2083303-DCA” in the NYC DCA search box)</em></p>
-</section>
-
-<p><a href="index.html" class="button">← Back to Home</a></p>
+    <p><a href="index.html" class="button">← Back to Home</a></p>
+  </main>
 
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
