--- a/gallery.html
+++ b/gallery.html
@@ -1,74 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   Gallery | ELI MAS Construction Inc
-  </title>
+  <title>Gallery | ELI MAS Construction Inc</title>
   <meta content="View photos of past ELI MAS Construction projects including sheds, concrete work, and masonry jobs in NYC." name="description"/>
   <link href="css/style.css" rel="stylesheet"/>
   <link href="lightbox/css/lightbox.min.css" rel="stylesheet"/>
- </head>
- <body>
+</head>
+<body>
   <header>
-   <h1>
-    ELI MAS CONSTRUCTION INC
-   </h1>
-   <p>
-    Licensed &amp; Insured NYC Home Improvement Contractor
-   </p>
-   <p>
-    ¡Hablamos Español!
-   </p>
-   </header>
-  <div style="padding: 10px;">
-   <a href="index.html">
-    ← Back to Home
-   </a>
-  </div>
-  <section class="project-gallery">
-   <h2>
-    Gallery
-   </h2>
-  <a data-lightbox="project-gallery" data-title="New 18' x 15 x 7'6&quot; shed" href="Images/shed.jpg">
-  <img alt="Shed view" src="Images/shed.jpg" style="width: 200px; margin: 10px;" />
-  </a>
-  <p>
-    New 18' x 15' x 7'6" shed with an 18’ x 18’ x 18” concrete foundation and a 20’ x 25’ x 6” concrete deck
-  </p>
+    <h1>ELI MAS CONSTRUCTION INC</h1>
+    <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
+    <p>¡Hablamos Español!</p>
+  </header>
 
-   <a data-lightbox="project-gallery" data-title="New shed side" href="Images/shed2.jpg">
-   <img alt="Side view of the shed" src="Images/shed2.jpg" style="width: 200px; margin: 10px;" />
-   </a>
-   <p>
-     Left side view of the same shed project
-   </p>
-   <a data-lightbox="project-gallery" data-title="Test Image 1" href="Images/1.jpg">
-    <img alt="Test Image 1" src="Images/1.jpg" style="width: 200px; margin: 10px;"/>
-   </a>
-   <a data-lightbox="project-gallery" data-title="Test Image 2" href="Images/2.jpg">
-    <img alt="Test Image 2" src="Images/2.jpg" style="width: 200px; margin: 10px;"/>
-   </a>
-   <a data-lightbox="project-gallery" data-title="Test Image 3" href="Images/3.jpg">
-    <img alt="Test Image 3" src="Images/3.jpg" style="width: 200px; margin: 10px;"/>
-   </a>
-  </section>
-  <footer>
-   <p>
-    © 2025 ELI MAS CONSTRUCTION INC. All rights reserved.
-   </p>
-   <p>
-    <a class="button" href="index.html">
-     ← Back to Home
+  <section class="project-gallery">
+    <h2>Gallery</h2>
+    <a data-lightbox="project-gallery" data-title="New 18' x 15' x 7'6&quot; shed" href="Images/shed.jpg">
+      <img alt="Shed view" src="Images/shed.jpg" />
     </a>
-   </p>
+    <p>New 18' x 15' x 7'6" shed with an 18’ x 18’ x 18” concrete foundation and a 20’ x 25’ x 6” concrete deck</p>
+
+    <a data-lightbox="project-gallery" data-title="Side view of the new shed" href="Images/shed2.jpg">
+      <img alt="Side view of the shed" src="Images/shed2.jpg" />
+    </a>
+    <p>Left side view of the same shed project</p>
+
+    <a data-lightbox="project-gallery" data-title="Test Image 1" href="Images/1.jpg">
+      <img alt="Test Image 1" src="Images/1.jpg" />
+    </a>
+    <a data-lightbox="project-gallery" data-title="Test Image 2" href="Images/2.jpg">
+      <img alt="Test Image 2" src="Images/2.jpg" />
+    </a>
+    <a data-lightbox="project-gallery" data-title="Test Image 3" href="Images/3.jpg">
+      <img alt="Test Image 3" src="Images/3.jpg" />
+    </a>
+  </section>
+
+  <footer>
+    <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
+    <p><a class="button" href="index.html">← Back to Home</a></p>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js">
-  </script>
-  <script src="lightbox/js/lightbox.min.js">
-  </script>
-  <script src="js/script.js">
-  </script>
- </body>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="lightbox/js/lightbox.min.js"></script>
+  <script src="js/script.js"></script>
+</body>
 </html>
