--- a/services.html
+++ b/services.html
@@ -20,20 +20,7 @@
    <p>
     ¡Hablamos Español!
    </p>
-   <div class="hamburger" onclick="toggleMenu()">
-    <div>
-    </div>
-    <div>
-    </div>
-    <div>
-    </div>
-   </div>
-  </header>
-  <div style="padding: 10px;">
-   <a href="index.html">
-    ← Back to Home
-   </a>
-  </div>
+     </div>
   <section>
    <h2>
     Our Services
@@ -73,6 +60,11 @@
     </strong>
     All services provided by ELI MAS Construction Inc. are performed in full compliance with applicable NYC laws, codes, and regulations. Where required, we coordinate with licensed professionals and obtain all necessary permits to ensure every project meets legal and safety standards.
    </p>
+ <p>
+   <a class="button" href="index.html">
+    ← Back to Home
+   </a>
+  </p>
   </section>
   <footer>
    <p>
