--- a/Exterior.html
+++ b/Exterior.html
@@ -1,89 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   Exterior Work | ELI MAS Construction Inc
-  </title>
-  <meta content="Exterior work by ELI MAS Construction Inc including sidewalk repair and more." name="description"/>
+  <title>Exterior Work | ELI MAS Construction Inc</title>
+  <meta content="Expert exterior services by ELI MAS Construction Inc, including sidewalk repair, driveway repairs, foundation work, masonry, and more." name="description"/>
   <link href="css/style.css" rel="stylesheet"/>
- </head>
- <body>
+</head>
+<body>
   <header>
-   <h1>
-    ELI MAS CONSTRUCTION INC
-   </h1>
-   <p>
-    Licensed &amp; Insured NYC Home Improvement Contractor
-   </p>
-   <p>
-    ¡Hablamos Español!
-   </p>
+   <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
+   <h1>ELI MAS CONSTRUCTION INC</h1>
+   <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
+   <p>¡Hablamos Español!</p>
   </header>
-  <div style="padding: 10px;">
-   <a href="index.html">
-    ← Back to Home
-   </a>
-  </div>
+
   <section>
-   <h2>
-    Exterior Work
-   </h2>
-   <p>
-    <strong>
-     Sidewalk Repair:
-    </strong>
-    We specialize in professional sidewalk repair and new  installion. Whether you're repairing cracks, replacing broken slabs, or need DOT violation removal, we’ve got you covered.
-   </p>
-   <p>
-    <strong>
-     Driveway Repairs:
-    </strong>
-    From resurfacing to full driveway replacements, our team ensures long-lasting, level, and visually appealing driveways. We work with concrete, asphalt, and pavers depending on your needs.
-   </p>
-   <p>
-    <strong>
-     Foundation Repair:
-    </strong>
-    Professional assessment and repair of foundation issues to maintain structural integrity.
-   </p>
-   <p>
-    <strong>
-     Masonry:
-    </strong>
-    Brick, stone, and concrete block work for durable and attractive structures.
-   </p>
-   <p>
-    <strong>
-     Pavers &amp; Stones:
-    </strong>
-    Installation and repair of decorative pavers and natural stone surfaces.
-   </p>
-   <p>
-    <strong>
-     Siding:
-    </strong>
-    Expert installation and repair of vinyl, wood, and fiber cement siding to protect and beautify your home.
-   </p>
+   <h2>Exterior Work</h2>
+   <p><strong>Sidewalk Repair:</strong> We specialize in professional sidewalk repair and new installation. Whether you're repairing cracks, replacing broken slabs, or need DOT violation removal, we’ve got you covered.</p>
+   <p><strong>Driveway Repairs:</strong> From resurfacing to full driveway replacements, our team ensures long-lasting, level, and visually appealing driveways. We work with concrete, asphalt, and pavers depending on your needs.</p>
+   <p><strong>Foundation Repair:</strong> Professional assessment and repair of foundation issues to maintain structural integrity.</p>
+   <p><strong>Masonry:</strong> Brick, stone, and concrete block work for durable and attractive structures.</p>
+   <p><strong>Pavers &amp; Stones:</strong> Installation and repair of decorative pavers and natural stone surfaces.</p>
+   <p><strong>Siding:</strong> Expert installation and repair of vinyl, wood, and fiber cement siding to protect and beautify your home.</p>
   </section>
-  <section class="compliance-note">
-   <p>
-    <strong>
-     Note:
-    </strong>
-    All services provided by ELI MAS Construction Inc. are performed in full compliance with applicable NYC laws, codes, and regulations. Where required, we coordinate with licensed professionals and obtain all necessary permits to ensure every project meets legal and safety standards.
-   </p>
-  </section>
-  <p>
-   <a class="button" href="services.html">
-    ← Back to Services
-   </a>
-  </p>
+
+  <p><a class="button" href="services.html">← Back to Services</a></p>
+
   <footer>
-   <p>
-    © 2025 ELI MAS CONSTRUCTION INC. All rights reserved.
-   </p>
+   <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
   </footer>
- </body>
+</body>
 </html>
