--- a/Sheds.html
+++ b/Sheds.html
@@ -3,38 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Exterior Work | ELI MAS Construction Inc</title>
-  <meta name="description" content="Exterior work by ELI MAS Construction Inc including sidewalk repair and more.">
+  <title>Shed Construction & Repair | ELI MAS Construction Inc</title>
+  <meta name="description" content="Shed construction, repair, and restoration services by ELI MAS Construction Inc. Custom sheds, concrete foundations, and more for your storage needs." />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
+    <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
     <h1>ELI MAS CONSTRUCTION INC</h1>
     <p>Licensed & Insured NYC Home Improvement Contractor</p>
     <p>¡Hablamos Español!</p>
   </header>
 
-   <section>
-  <h2>Shed Construction & Repair</h2>
-  <p><strong>Custom Shed Construction:</strong> We build sheds tailored to your size, style, and storage needs using      quality materials.</p>
+  <section>
+    <h2>Shed Construction & Repair</h2>
+    <p><strong>Custom Shed Construction:</strong> We build sheds tailored to your size, style, and storage needs using quality materials.</p>
+    <p><strong>Shed Repair & Restoration:</strong> Repair services for aging or damaged sheds, including roof, siding, and structural reinforcement.</p>
+    <p><strong>Concrete Foundations:</strong> Pouring durable concrete pads to provide a level, long-lasting base for your shed.</p>
+    <p><strong>Wood & Vinyl Sheds:</strong> We construct sheds using pressure-treated wood or maintenance-free vinyl options.</p>
+    <p><strong>Doors & Windows:</strong> Installation and replacement of shed doors and windows to improve function and aesthetics.</p>
+    <p><strong>Insulation Services:</strong> Add insulation to your shed for year-round temperature control and improved comfort.</p>
+    <p><strong>Custom Shelving:</strong> Maximize storage with built-in or wall-mounted shelves designed for efficiency and access.</p>
+  </section>
 
-  <p><strong>Shed Repair & Restoration:</strong> Repair services for aging or damaged sheds, including roof, siding, and structural reinforcement.</p>
+  <p><a class="button" href="services.html">← Back to Services</a></p>
 
-  <p><strong>Concrete Foundations:</strong> Pouring durable concrete pads to provide a level, long-lasting base for your shed.</p>
-
-  <p><strong>Wood & Vinyl Sheds:</strong> We construct sheds using pressure-treated wood or maintenance-free vinyl options.</p>
-
-  <p><strong>Doors & Windows:</strong> Installation and replacement of shed doors and windows to improve function and aesthetics.</p>
-
-  <p><strong>Insulation Services:</strong> Add insulation to your shed for year-round temperature control and improved comfort.</p>
-
-  <p><strong>Custom Shelving:</strong> Maximize storage with built-in or wall-mounted shelves designed for efficiency and access.</p>
- </section>
-  <p>
-   <a class="button" href="services.html">
-    ← Back to Services
-   </a>
-  </p>
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
   </footer>
