--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
  </head>
  <body>
   <header>
+<img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
    <h1>ELI MAS CONSTRUCTION INC</h1>
    <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
    <p>¡Hablamos Español!</p>
