--- a/Interior.html
+++ b/Interior.html
@@ -1,75 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>
-   Interior Work | ELI MAS Construction Inc
-  </title>
-  <meta content="Explore interior services offered by ELI MAS Construction Inc — drywall, painting, flooring, and more." name="description"/>
+  <title>Interior Work | ELI MAS Construction Inc</title>
+  <meta content="Interior services by ELI MAS Construction Inc, including drywall, painting, flooring, and remodeling for your home." name="description"/>
   <link href="css/style.css" rel="stylesheet"/>
- </head>
- <body>
+</head>
+<body>
   <header>
-   <h1>
-    ELI MAS CONSTRUCTION INC
-   </h1>
-   <p>
-    Licensed &amp; Insured NYC Home Improvement Contractor
-   </p>
-   <p>
-    ¡Hablamos Español!
-   </p>
+    <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
+    <h1>ELI MAS CONSTRUCTION INC</h1>
+    <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
+    <p>¡Hablamos Español!</p>
   </header>
-  <div style="padding: 10px;">
-   <a href="index.html">
-    ← Back to Home
-   </a>
-  </div>
+
   <section>
-   <h2>
-    Interior Work
-   </h2>
-   <p>
-    <strong>
-     Drywall Repair:
-    </strong>
-    Professional patching, smoothing, and finishing for walls and ceilings to restore your interiors.
-   </p>
-   <p>
-    <strong>
-     Painting &amp; Wallpaper:
-    </strong>
-    Interior painting with attention to detail, plus wallpaper installation and removal for a fresh look.
-   </p>
-   <p>
-    <strong>
-     Flooring Installation:
-    </strong>
-    Installation of hardwood, laminate, tile, and vinyl flooring to enhance your home's interior.
-   </p>
-   <p>
-    <strong>
-     Kitchen &amp; Bathroom Remodeling:
-    </strong>
-    Expert remodeling services including cabinetry, countertops, and fixtures to upgrade your space.
-   </p>
-   <p>
-    <strong>
-     Trim &amp; Molding:
-    </strong>
-    Installation of baseboards, crown molding, and other finishing touches to add elegance and style.
-   </p>
+    <h2>Interior Work</h2>
+    <p><strong>Drywall Repair:</strong> Professional patching, smoothing, and finishing for walls and ceilings to restore your interiors.</p>
+    <p><strong>Painting &amp; Wallpaper:</strong> Interior painting with attention to detail, plus wallpaper installation and removal for a fresh look.</p>
+    <p><strong>Flooring Installation:</strong> Installation of hardwood, laminate, tile, and vinyl flooring to enhance your home's interior.</p>
+    <p><strong>Kitchen &amp; Bathroom Remodeling:</strong> Expert remodeling services including cabinetry, countertops, and fixtures to upgrade your space.</p>
+    <p><strong>Trim &amp; Molding:</strong> Installation of baseboards, crown molding, and other finishing touches to add elegance and style.</p>
   </section>
+
+  <p><a class="button" href="services.html">← Back to Services</a></p>
+
   <footer>
-   <p>
-    © 2025 ELI MAS CONSTRUCTION INC. All rights reserved.
-   </p>
-   <p>
-    <a class="button" href="services.html">
-     ← Back to Services
-    </a>
-   </p>
+    <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
   </footer>
- </body>
+
+</body>
 </html>
