--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <header>
+    <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
     <h1>ELI MAS CONSTRUCTION INC</h1>
     <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
     <p>¡Hablamos Español!</p>
@@ -17,26 +18,45 @@
 
   <section class="project-gallery">
     <h2>Gallery</h2>
-    <a data-lightbox="project-gallery" data-title="New 18' x 15' x 7'6&quot; shed" href="Images/shed.jpg">
-      <img alt="Shed view" src="Images/shed.jpg" />
+
+    <!-- Image 1 -->
+    <a data-lightbox="project-gallery" 
+       data-title="New 18' x 15' x 7'6&quot; shed" 
+       href="Images/shed.jpg">
+      <img alt="Shed view" src="Images/shed.jpg"/>
     </a>
     <p>New 18' x 15' x 7'6" shed with an 18’ x 18’ x 18” concrete foundation and a 20’ x 25’ x 6” concrete deck</p>
 
-    <a data-lightbox="project-gallery" data-title="Side view of the new shed" href="Images/shed2.jpg">
-      <img alt="Side view of the shed" src="Images/shed2.jpg" />
+    <!-- Image 2 -->
+    <a data-lightbox="project-gallery" 
+       data-title="Side view of the new shed" 
+       href="Images/shed2.jpg">
+      <img alt="Side view of the shed" src="Images/shed2.jpg"/>
     </a>
     <p>Left side view of the same shed project</p>
 
-    <a data-lightbox="project-gallery" data-title="Test Image 1" href="Images/1.jpg">
-      <img alt="Test Image 1" src="Images/1.jpg" />
+    <!-- Image 3 -->
+    <a data-lightbox="project-gallery" 
+       data-title="Test Image 1" 
+       href="Images/1.jpg">
+      <img alt="Test Image 1" src="Images/1.jpg"/>
     </a>
-    <a data-lightbox="project-gallery" data-title="Test Image 2" href="Images/2.jpg">
-      <img alt="Test Image 2" src="Images/2.jpg" />
+    <p>Test Image 1</p>
+    <!-- Image 4 -->
+    <a data-lightbox="project-gallery" 
+       data-title="Test Image 2" 
+       href="Images/2.jpg">
+      <img alt="Test Image 2" src="Images/2.jpg"/>
     </a>
-    <a data-lightbox="project-gallery" data-title="Test Image 3" href="Images/3.jpg">
-      <img alt="Test Image 3" src="Images/3.jpg" />
+    <p>Test Image 2</p>
+    <!-- Image 5 -->
+    <a data-lightbox="project-gallery" 
+       data-title="Test Image 3" 
+       href="Images/3.jpg">
+      <img alt="Test Image 3" src="Images/3.jpg"/>
     </a>
-  </section>
+    <p>Test Image 3</p>
+ </section>
 
   <footer>
     <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
