--- a/gallery.html
+++ b/gallery.html
@@ -38,8 +38,8 @@
     <!-- Image 3 -->
     <a data-lightbox="project-gallery" 
        data-title="Test Image 1" 
-       href="Images/1.jpg">
-      <img alt="Test Image 1" src="Images/1.jpg"/>
+       href="Images/1.heic">
+      <img alt="Test Image 1" src="Images/1.heic"/>
     </a>
     <p>Test Image 1</p>
     <!-- Image 4 -->
