--- a/gallery.html
+++ b/gallery.html
@@ -38,15 +38,15 @@
     <!-- Image 3 -->
     <a data-lightbox="project-gallery" 
        data-title="Test Image 1" 
-       href="Images/1.jpg">
-      <img alt="Test Image 1" src="Images/1.jpg"/>
+       href="Images/1.jpeg">
+      <img alt="Test Image 1" src="Images/1.jpeg"/>
     </a>
     <p>Test Image 1</p>
     <!-- Image 4 -->
     <a data-lightbox="project-gallery" 
        data-title="Test Image 2" 
        href="Images/2.jpg">
-      <img alt="Test Image 2" src="Images/2.jpg"/>
+      <img alt="Test Image 2" src="Images/2.jpeg"/>
     </a>
     <p>Test Image 2</p>
     <!-- Image 5 -->
