--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
     <a data-lightbox="project-gallery" 
        data-title="Test Image 2" 
        href="Images/2.jpg">
-      <img alt="Test Image 2" src="Images/2.jpeg"/>
+      <img alt="Test Image 2" src="Images/2.jpg"/>
     </a>
     <p>Test Image 2</p>
     <!-- Image 5 -->
