--- a/Interior-Work.html
+++ b/Interior-Work.html
@@ -17,11 +17,14 @@
 
   <section>
     <h2>Interior Work</h2>
-    <p><strong>Drywall Repair:</strong> Professional patching, smoothing, and finishing for walls and ceilings to restore your interiors.</p>
-    <p><strong>Painting &amp; Wallpaper:</strong> Interior painting with attention to detail, plus wallpaper installation and removal for a fresh look.</p>
-    <p><strong>Flooring Installation:</strong> Installation of hardwood, laminate, tile, and vinyl flooring to enhance your home's interior.</p>
-    <p><strong>Kitchen &amp; Bathroom Remodeling:</strong> Expert remodeling services including cabinetry, countertops, and fixtures to upgrade your space.</p>
-    <p><strong>Trim &amp; Molding:</strong> Installation of baseboards, crown molding, and other finishing touches to add elegance and style.</p>
+    <p>We provide a full range of interior construction and renovation services to improve the comfort, appearance, and functionality of your living space. Our skilled team handles everything from structural carpentry to high-end finishes.</p>
+
+  <ul>
+    <li><strong>Tile Installation:</strong> Expert installation of ceramic, porcelain, and natural stone tiles for floors, walls, and backsplashes</li>
+    <li><strong>Carpentry:</strong> Custom framing, trim work, doors, and built-in shelving</li>
+    <li><strong>Renovations:</strong> Kitchen and bathroom remodeling, drywall, flooring, and painting</li>
+    <li><strong>Demolition:</strong> Safe and efficient interior demolition to prepare for remodeling or structural updates</li>
+  </ul>
   </section>
 
   <p><a class="button" href="services.html">← Back to Services</a></p>
