--- a/services.html
+++ b/services.html
@@ -21,13 +21,27 @@
     <section>
       <h2>Our Services</h2>
       <ul class="services-list">
-        <li><a href="Exterior.html">Exterior</a></li>
-        <li><a href="Fence.html">Fence</a></li>
-        <li><a href="Interior.html">Interior</a></li>
+        <li><a href="Exterior-Work.html">Exterior Work</a></li>
+        <li><a href="Interior-Work.html">Interior Work</a></li>
         <li><a href="Roofing.html">Roofing</a></li>
-        <li><a href="Sheds.html">Sheds</a></li>
-      </ul>
+        </ul>
     </section>
+  
+        <section>
+      <h2>What We Do</h2>
+      <p>ELI MAS Construction provides a full range of construction and renovation services, both inside and out.</p>
+      <ul>
+      <li><strong>Concrete Work:</strong> Sidewalks, driveways, patios, and slabs</li>
+      <li><strong>Framing:</strong> Structural framing for additions and renovations</li>
+      <li><strong>Carpentry:</strong> Trim, doors, cabinetry, and custom woodwork</li>
+      <li><strong>Tile Installation:</strong> Floors, walls, backsplashes, and bathrooms</li>
+      <li><strong>Brick Work:</strong> Masonry, steps, facades, and retaining walls</li>
+      <li><strong>Roofing:</strong> New roofs, replacements, and repairs</li>
+      <li><strong>Siding:</strong> Vinyl, fiber cement, and wood siding installation</li>
+      <li><strong>Renovations:</strong> Kitchens, bathrooms, basements, and full-home updates</li>
+      <li><strong>Demolition:</strong> Interior demo for remodeling and rebuilds</li>
+      </ul>
+   </section>
 
     <section class="compliance-note">
       <p>
@@ -37,6 +51,8 @@
         <a class="button" href="index.html">← Back to Home</a>
       </p>
     </section>
+
+
 
     <footer>
       <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
