--- a/services.html
+++ b/services.html
@@ -18,16 +18,8 @@
       <p>¡Hablamos Español!</p>
     </header>
 
-    <section>
-      <h2>Our Services</h2>
-      <ul class="services-list">
-        <li><a href="Exterior-Work.html">Exterior Work</a></li>
-        <li><a href="Interior-Work.html">Interior Work</a></li>
-        <li><a href="Roofing.html">Roofing</a></li>
-        </ul>
-    </section>
-  
-        <section>
+ 
+     <section>
       <h2>What We Do</h2>
       <p>ELI MAS Construction provides a full range of construction and renovation services, both inside and out.</p>
       <ul>
@@ -41,7 +33,17 @@
       <li><strong>Renovations:</strong> Kitchens, bathrooms, basements, and full-home updates</li>
       <li><strong>Demolition:</strong> Interior demo for remodeling and rebuilds</li>
       </ul>
-   </section>
+    </section>
+
+    <section>
+  <h2>Learn More</h2>
+  <ul class="services-list">
+    <li><a href="Exterior-Work.html">Exterior Work</a></li>
+    <li><a href="Interior-Work.html">Interior Work</a></li>
+    <li><a href="Roofing.html">Roofing</a></li>
+  </ul>
+ </section>
+
 
     <section class="compliance-note">
       <p>
