--- a/Roofing.html
+++ b/Roofing.html
@@ -24,7 +24,8 @@
    <p><strong>Gutter Installation &amp; Repair:</strong> Ensure proper water drainage with professional gutter setup and maintenance.</p>
   </section>
 
-  <p><a href="gallery.html#roofing-gallery">See our roofing work in the photo gallery</a></p>
+  <p><a href="Roofing-Gallery.html#roofing-gallery">See our roofing work photo gallery</a></p>
+
    
   <p><a class="button" href="services.html">← Back to Services</a></p>
 
