--- a/about.html
+++ b/about.html
@@ -14,14 +14,21 @@
    <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
    <p>¡Hablamos Español!</p>
   </header>
-  <section>
-   <h2>About Us</h2>
-   <p><strong>ELI MAS Construction, Inc.</strong> was founded by Eliseo Camas Agualema, who started his journey in the trades as a young man. Originally established in 2005 as J.B.C. Construction, the company has grown into a trusted name in New York City construction.</p>
-   <p>Built on a foundation of hard work, skill, and reliability, our mission is to deliver high-quality home improvement services with honesty and care.</p>
-   <p>We specialize in concrete sidewalks and driveways, masonry, paver installations, and in-home renovations tailored to our clients' needs.</p>
-   <p>Proudly serving residential, commercial, and public clients across all five boroughs of New York City.</p>
-  </section>
+  
+  <section class="about-section">
+  <h2>About Us</h2>
+
+  <p><strong>ELI MAS Construction, Inc.</strong> was founded by Eliseo Camas Agualema, who began his career in the trades at a young age. Originally launched in the mid 2000's as J.B.C. Construction, the company has grown into a trusted name in New York City construction.</p>
+
+<p>Built on a foundation of hard work, skill, and reliability, our mission is to provide high-quality home improvement services with honesty and care.</p>
+
+<p>We specialize in concrete sidewalks and driveways, masonry, paver installations, and in-home renovations — all tailored to meet the unique needs of our clients.</p>
+
+<p>We proudly serve residential, commercial, and public clients across all five boroughs of New York City.</p>
+
   <p><a class="button" href="index.html">← Back to Home</a></p>
+</section>
+
   <footer>
    <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
   </footer>
