--- a/Exterior-Work.html
+++ b/Exterior-Work.html
@@ -15,17 +15,27 @@
    <p>¡Hablamos Español!</p>
   </header>
 
-  <section>
-   <h2>Exterior Work</h2>
-   <p><strong>Sidewalk Repair:</strong> We specialize in professional sidewalk repair and new installation. Whether you're repairing cracks, replacing broken slabs, or need DOT violation removal, we’ve got you covered.</p>
-   <p><strong>Driveway Repairs:</strong> From resurfacing to full driveway replacements, our team ensures long-lasting, level, and visually appealing driveways. We work with concrete, asphalt, and pavers depending on your needs.</p>
-   <p><strong>Foundation Repair:</strong> Professional assessment and repair of foundation issues to maintain structural integrity.</p>
-   <p><strong>Masonry:</strong> Brick, stone, and concrete block work for durable and attractive structures.</p>
-   <p><strong>Pavers &amp; Stones:</strong> Installation and repair of decorative pavers and natural stone surfaces.</p>
-   <p><strong>Siding:</strong> Expert installation and repair of vinyl, wood, and fiber cement siding to protect and beautify your home.</p>
-  </section>
+ <section class="exterior-section">
+  <h2>Exterior Work</h2>
 
-  <p><a class="button" href="services.html">← Back to Services</a></p>
+  <p><strong>Sidewalk Repair:</strong> We specialize in professional sidewalk repair and new installation. Whether you're repairing cracks, replacing broken slabs, or need DOT violation removal, we’ve got you covered.</p>
+
+  <p><strong>Driveway Repairs:</strong> From resurfacing to full driveway replacements, our team ensures long-lasting, level, and visually appealing driveways. We work with concrete, asphalt, and pavers depending on your needs.</p>
+
+  <p><strong>Foundation Repair:</strong> Professional assessment and repair of foundation issues to maintain structural integrity.</p>
+
+  <p><strong>Masonry:</strong> Brick, stone, and concrete block work for durable and attractive structures.</p>
+
+  <p><strong>Pavers & Stones:</strong> Installation and repair of decorative pavers and natural stone surfaces.</p>
+
+  <p><strong>Siding:</strong> Expert installation and repair of vinyl, wood, and fiber cement siding to protect and beautify your home.</p>
+
+  <div class="button-group">
+  <a class="button" href="gallery.html#roofing-gallery">See our Exterior Work photo gallery</a>
+  <a class="button" href="services.html">← Back to Services</a>
+</div>
+
+</section>
 
   <footer>
    <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
