--- a/Interior-Work.html
+++ b/Interior-Work.html
@@ -15,19 +15,25 @@
     <p>¡Hablamos Español!</p>
   </header>
 
-  <section>
-    <h2>Interior Work</h2>
-    <p>We provide a full range of interior construction and renovation services to improve the comfort, appearance, and functionality of your living space. Our skilled team handles everything from structural carpentry to high-end finishes.</p>
+  <<section class="interior-section">
+  <h2>Interior Work</h2>
 
-  <ul>
-    <li><strong>Tile Installation:</strong> Expert installation of ceramic, porcelain, and natural stone tiles for floors, walls, and backsplashes</li>
-    <li><strong>Carpentry:</strong> Custom framing, trim work, doors, and built-in shelving</li>
-    <li><strong>Renovations:</strong> Kitchen and bathroom remodeling, drywall, flooring, and painting</li>
-    <li><strong>Demolition:</strong> Safe and efficient interior demolition to prepare for remodeling or structural updates</li>
-  </ul>
-  </section>
+  <p>We provide a full range of interior construction and renovation services to improve the comfort, appearance, and functionality of your living space. Our skilled team handles everything from structural carpentry to high-end finishes.</p>
 
-  <p><a class="button" href="services.html">← Back to Services</a></p>
+  <p><strong>Tile Installation:</strong> Expert installation of ceramic, porcelain, and natural stone tiles for floors, walls, and backsplashes</p>
+
+  <p><strong>Carpentry:</strong> Custom framing, trim work, doors, and built-in shelving</p>
+
+  <p><strong>Renovations:</strong> Kitchen and bathroom remodeling, drywall, flooring, and painting</p>
+
+  <p><strong>Demolition:</strong> Safe and efficient interior demolition to prepare for remodeling or structural updates</p>
+
+  <div class="interior-buttons">
+    <a class="button" href="gallery.html#roofing-gallery">See our Interior Work photo gallery</a>
+    <a class="button" href="services.html">← Back to Services</a>
+  </div>
+</section>
+
 
   <footer>
     <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
