--- a/index.html
+++ b/index.html
@@ -16,32 +16,42 @@
    <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
    <p>¡Hablamos Español!</p>
   </header>
-
+  
+  
   <nav>
    <ul class="nav-links" id="navLinks">
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="services.html">Services</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
+    <!-- <li><a href="gallery.html">Gallery</a></li> -->
     <li><a href="contact.html">Contact</a></li>
    </ul>
   </nav>
 
   <main>
-   <section>
-    <h2>Serving the Bronx, Brooklyn, Manhattan, Queens &amp; Staten Island</h2>
-    <ul>
-     <li>Residential, Commercial, and Public Projects</li>
-    </ul>
-   </section>
+  <div class="tagline">
+    <section>
+      <h2>Serving the Bronx, Brooklyn, Manhattan, Queens &amp; Staten Island</h2>
+      <ul>
+        <p>Residential, Commercial, and Public Projects</p>
 
-   <section>
-    <h2>To Get Your Free Estimate</h2>
-    <p class="call-now">
-     Call <a href="tel:9147556641">914-755-6641</a> today!
-    </p>
-   </section>
-  </main>
+    </section>
+
+    <h2>Our Work Vehicle</h2>
+    <a href="Images/1.jpeg" data-lightbox="vehicle" data-title="ELI MAS Construction work vehicle — fully branded and ready for any job">
+      <img src="Images/1.jpeg" alt="ELI MAS Construction work vehicle" style="max-width: 300px; border-radius: 8px; display: block; margin: 10px auto;" />
+    </a>
+    <p>Our fully equipped work vehicle — ready to serve all 5 boroughs and beyond.</p>
+
+    <section>
+      <h2>To Get Your Free Estimate</h2>
+      <p class="call-now">
+        Call <a href="tel:9147556641">914-755-6641</a> today!
+      </p>
+    </section>
+  </div>
+</main>
+
 
   <footer>
    <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
