--- a/services.html
+++ b/services.html
@@ -19,40 +19,41 @@
     </header>
 
  
-     <section>
-      <h2>What We Do</h2>
-      <p>ELI MAS Construction provides a full range of construction and renovation services, both inside and out.</p>
-      <ul>
-      <li><strong>Concrete Work:</strong> Sidewalks, driveways, patios, and slabs</li>
-      <li><strong>Framing:</strong> Structural framing for additions and renovations</li>
-      <li><strong>Carpentry:</strong> Trim, doors, cabinetry, and custom woodwork</li>
-      <li><strong>Tile Installation:</strong> Floors, walls, backsplashes, and bathrooms</li>
-      <li><strong>Brick Work:</strong> Masonry, steps, facades, and retaining walls</li>
-      <li><strong>Roofing:</strong> New roofs, replacements, and repairs</li>
-      <li><strong>Siding:</strong> Vinyl, fiber cement, and wood siding installation</li>
-      <li><strong>Renovations:</strong> Kitchens, bathrooms, basements, and full-home updates</li>
-      <li><strong>Demolition:</strong> Interior demo for remodeling and rebuilds</li>
-      </ul>
-    </section>
+     <section class="services-section">
+  <h2>What We Do</h2>
+  <p>ELI MAS Construction provides a full range of construction and renovation services, both inside and out.</p>
+  <ul class="services-list">
+    <li><strong>Concrete Work:</strong> Sidewalks, driveways, patios, and slabs</li>
+    <li><strong>Framing:</strong> Structural framing for additions and renovations</li>
+    <li><strong>Carpentry:</strong> Trim, doors, cabinetry, and custom woodwork</li>
+    <li><strong>Tile Installation:</strong> Floors, walls, backsplashes, and bathrooms</li>
+    <li><strong>Brick Work:</strong> Masonry, steps, facades, and retaining walls</li>
+    <li><strong>Roofing:</strong> New roofs, replacements, and repairs</li>
+    <li><strong>Siding:</strong> Vinyl, fiber cement, and wood siding installation</li>
+    <li><strong>Renovations:</strong> Kitchens, bathrooms, basements, and full-home updates</li>
+    <li><strong>Demolition:</strong> Interior demo for remodeling and rebuilds</li>
+  </ul>
+</section>
 
-    <section>
+    <section class="learn-more-section">
   <h2>Learn More</h2>
   <ul class="services-list">
     <li><a href="Exterior-Work.html">Exterior Work</a></li>
     <li><a href="Interior-Work.html">Interior Work</a></li>
     <li><a href="Roofing.html">Roofing</a></li>
   </ul>
- </section>
+</section>
 
 
-    <section class="compliance-note">
-      <p>
-        <strong>Note:</strong> All services provided by ELI MAS Construction Inc. are performed in full compliance with applicable NYC laws, codes, and regulations. Where required, we coordinate with licensed professionals and obtain all necessary permits to ensure every project meets legal and safety standards.
-      </p>
-      <p>
-        <a class="button" href="index.html">← Back to Home</a>
-      </p>
-    </section>
+
+   <section class="compliance-note">
+  <p><strong>Note:</strong> All services provided by ELI MAS Construction Inc. are performed in full compliance with applicable NYC laws, codes, and regulations. Where required, we coordinate with licensed professionals and obtain all necessary permits to ensure every project meets legal and safety standards.</p>
+  
+  <p style="text-align: center; margin-top: 20px;">
+    <a class="button" href="index.html">← Back to Home</a>
+  </p>
+</section>
+
 
 
 
