--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </section>
 
     <h2>Our Work Vehicle</h2>
-    <a href="Images/1.jpeg" data-lightbox="vehicle" data-title="ELI MAS Construction work vehicle — fully branded and ready for any job">
-      <img src="Images/1.jpeg" alt="ELI MAS Construction work vehicle" style="max-width: 300px; border-radius: 8px; display: block; margin: 10px auto;" />
+    <a href="Images/Vehicle.jpeg" data-lightbox="vehicle" data-title="ELI MAS Construction work vehicle — fully branded and ready for any job">
+      <img src="Images/Vehicle.jpeg" alt="ELI MAS Construction work vehicle" style="max-width: 300px; border-radius: 8px; display: block; margin: 10px auto;" />
     </a>
     <p>Our fully equipped work vehicle — ready to serve all 5 boroughs and beyond.</p>
 
