--- a/Exterior-Work.html
+++ b/Exterior-Work.html
@@ -31,7 +31,7 @@
   <p><strong>Siding:</strong> Expert installation and repair of vinyl, wood, and fiber cement siding to protect and beautify your home.</p>
 
   <div class="button-group">
-  <a class="button" href="gallery.html#roofing-gallery">See our Exterior Work photo gallery</a>
+  <a class="button" href="exterior-gallery.html#roofing-gallery">See our Exterior Work photo gallery</a>
   <a class="button" href="services.html">← Back to Services</a>
 </div>
 
