--- a/Interior-Work.html
+++ b/Interior-Work.html
@@ -29,7 +29,7 @@
   <p><strong>Demolition:</strong> Safe and efficient interior demolition to prepare for remodeling or structural updates</p>
 
   <div class="interior-buttons">
-    <a class="button" href="gallery.html#roofing-gallery">See our Interior Work photo gallery</a>
+    <a class="button" href="ginterior-gallery.html#interior-gallery">See our Interior Work photo gallery</a>
     <a class="button" href="services.html">← Back to Services</a>
   </div>
 </section>
