--- a/Roofing.html
+++ b/Roofing.html
@@ -15,7 +15,7 @@
    <p>¡Hablamos Español!</p>
   </header>
 
-  <section>
+  <section class="roofing-section">
    <h2>Roofing Services</h2>
    <p><strong>Roof Installation:</strong> Complete roof replacements and new installations using asphalt shingles, flat roofing systems, and more.</p>
    <p><strong>Roof Repair:</strong> Leak detection and repair, shingle replacement, and flashing fixes to keep your home protected.</p>
@@ -24,10 +24,10 @@
    <p><strong>Gutter Installation &amp; Repair:</strong> Ensure proper water drainage with professional gutter setup and maintenance.</p>
   </section>
 
-  <p><a href="Roofing-Gallery.html#roofing-gallery">See our roofing work photo gallery</a></p>
-
-   
-  <p><a class="button" href="services.html">← Back to Services</a></p>
+  <div class="button-group">
+  <a href="Roofing-Gallery.html#roofing-gallery" class="button">See our roofing work photo gallery</a>
+  <a href="services.html" class="button">← Back to Services</a>
+</div>
 
   <footer>
    <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
