--- a/services.html
+++ b/services.html
@@ -38,8 +38,8 @@
     <section class="learn-more-section">
   <h2>Learn More</h2>
   <ul class="services-list">
-    <li><a href="Exterior-Work.html">Exterior Work</a></li>
-    <li><a href="Interior-Work.html">Interior Work</a></li>
+    <li><a href="Exterior.html">Exterior Work</a></li>
+    <li><a href="Interior.html">Interior Work</a></li>
     <li><a href="Roofing.html">Roofing</a></li>
   </ul>
 </section>
