--- a/exterior-gallery.html
+++ b/exterior-gallery.html
@@ -23,14 +23,13 @@
       <p>New 18' x 15' x 7'6" shed with an 18’ x 18’ x 18” concrete foundation and a 20’ x 25’ x 6” concrete deck</p>
       <a href="Images/shed2.jpg" data-lightbox="roofing"><img src="Images/shed2.jpg" alt="Exterior project 2"></a>
       <p>Left side view of the same shed project</p>
-     
-      /section>
-    <p style="text-align: center; margin-top: 20px;">
-
-    <a href="Exterior.html" class="button">
-    ← Return to Exterior
-  </a>
-</p>
+     </div>
+      
+     <p style="text-align: center; margin-top: 20px;">
+    <div class="back-button">
+    <a href="Exterior.html" class="button">← Return to Exterior</a>
+    </p>
+    </section>>
 
   <footer>
     <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
