--- a/Roofing.html
+++ b/Roofing.html
@@ -25,7 +25,7 @@
   </section>
 
   <div class="button-group">
-  <a href="Roofing-Gallery.html#roofing-gallery" class="button">See our roofing work photo gallery</a>
+  <a href="roofing-gallery.html#roofing-gallery" class="button">See our roofing work photo gallery</a>
   <a href="services.html" class="button">← Back to Services</a>
 </div>
 
