--- a/contact.html
+++ b/contact.html
@@ -39,30 +39,33 @@
     </div>
 <h2>Send Us a Message</h2>
 <form class="contact-form" action="#" method="post">
-  <label for="name">Name:</label>
+  <label for="name">Name: <span style="color: red;">*</span></label>
   <input type="text" id="name" name="name" required />
 
-  <label for="phone">Phone Number:</label>
+  <label for="phone">Phone Number: <span style="color: red;">*</span></label>
   <input type="tel" id="phone" name="phone" required />
 
-  <label for="work-type">Type of Work:</label>
-<select id="work-type" name="work-type" required>
-  <option value="">-- Select --</option>
-  <option value="exterior">Exterior Work</option>
-  <option value="interior">Interior Work</option>
-  <option value="roofing">Roofing</option>
-</select>
+  <label for="work-type">Type of Work: <span style="color: red;">*</span></label>
+  <select id="work-type" name="work-type" required>
+    <option value="">-- Select --</option>
+    <option value="exterior">Exterior Work</option>
+    <option value="interior">Interior Work</option>
+    <option value="roofing">Roofing</option>
+  </select>
 
-<label for="subservice" id="subservice-label" style="display: none;">Specific Service:</label>
-<select id="subservice" name="subservice" required style="display: none;">
-  <option value="">-- Select a type of work first --</option>
-</select>
+  <label for="subservice" id="subservice-label" style="display: none;">
+    Specific Service: <span style="color: red;">*</span>
+  </label>
+  <select id="subservice" name="subservice" required style="display: none;">
+    <option value="">-- Select a type of work first --</option>
+  </select>
 
   <label for="message">Message:</label>
-  <textarea id="message" name="message" rows="5" required></textarea>
+  <textarea id="message" name="message" rows="5"></textarea>
 
   <button type="submit">Submit</button>
 </form>
+
 
     <div class="back-button">
       <a class="button" href="index.html">← Back to Home</a>
