--- a/exterior-gallery.html
+++ b/exterior-gallery.html
@@ -17,19 +17,18 @@
   </header>
 
   <section class="roofing-gallery">
-     <h2 id="exterior-gallery">Exterior Projects</h2>
-     <div class="gallery">
-      <a href="Images/shed.jpg" data-lightbox="roofing"><img src="Images/shed.jpg" alt="Exterior project 1"></a>
-      <p>New 18' x 15' x 7'6" shed with an 18’ x 18’ x 18” concrete foundation and a 20’ x 25’ x 6” concrete deck</p>
-      <a href="Images/shed2.jpg" data-lightbox="roofing"><img src="Images/shed2.jpg" alt="Exterior project 2"></a>
-      <p>Left side view of the same shed project</p>
-     </div>
-      
-     <p style="text-align: center; margin-top: 20px;">
-    <div class="back-button">
+  <h2 id="exterior-gallery">Exterior Projects</h2>
+  <p><a href="Images/shed.jpg" data-lightbox="exterior-gallery" data-title="New Shed Project">
+    View New Shed Project
+  </a></p>
+
+  <!-- Hidden preload image -->
+  <a href="Images/shed2.jpg" data-lightbox="exterior-gallery" data-title="Side view of the same shed project" style="display: none;"></a>
+
+  <p style="text-align: center; margin-top: 20px;">
     <a href="Exterior.html" class="button">← Return to Exterior</a>
-    </p>
-    </section>>
+  </p>
+</section>
 
   <footer>
     <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
