--- a/interior-gallery.html
+++ b/interior-gallery.html
@@ -16,20 +16,21 @@
     <p>¡Hablamos Español!</p>
   </header>
 
-  <section class="roofing-gallery">
-     <h2 id="interior-gallery">Exterior Projects</h2>
-     <div class="gallery">
-      <a href="Images/porc-tile.jpg" data-lightbox="roofing"><img src="Images/porc-tile.jpg" alt="Interior project 1"></a>
-      <p>18" x 18" porcelain Tiles</p>
-      <a href="Images/porc-tile2.jpg" data-lightbox="roofing"><img src="Images/porc-tile2.jpg" alt="Interior project 2"></a>
-      <p>Left side view of the same shed project</p>
-     
-    <p style="text-align: center; margin-top: 20px;">
+  <section class="interior-gallery">
+  <h2 id="interior-gallery">Interior Projects</h2>
 
-    <a href="Interior.html" class="button">
-    ← Return to Interior
-  </a>
-</p>
+  <p><a href="Images/porc-tile.jpg" data-lightbox="interior-gallery" data-title="18&quot; x 18&quot; Porcelain Tile Installation">
+    View Porcelain Tile Project
+  </a></p>
+
+  <!-- Hidden preload image -->
+  <a href="Images/porc-tile2.jpg" data-lightbox="interior-gallery" data-title="Side view of same porcelain tile project" style="display: none;"></a>
+
+  <p style="text-align: center; margin-top: 20px;">
+    <a href="Interior.html" class="button">← Return to Interior</a>
+  </p>
+</section>
+
 
   <footer>
     <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
