--- a/roofing-gallery.html
+++ b/roofing-gallery.html
@@ -17,17 +17,18 @@
   </header>
 
   <section class="roofing-gallery">
-     <h2 id="roofing-gallery">Roofing Projects</h2>
-     <div class="gallery">
-      <a href="Images/r1.jpeg" data-lightbox="roofing"><img src="Images/r1.jpeg" alt="Roofing project 1"></a>
-      <a href="Images/r2.jpeg" data-lightbox="roofing"><img src="Images/r2.jpeg" alt="Roofing project 2"></a>
-      <a href="Images/r3.jpg" data-lightbox="roofing"><img src="Images/r3.jpg" alt="Roofing project 3"></a>
-      <a href="Images/r4.jpeg" data-lightbox="roofing"><img src="Images/r4.jpeg" alt="Roofing project 4"></a>
-      <a href="Images/r5.jpeg" data-lightbox="roofing"><img src="Images/r5.jpeg" alt="Roofing project 5"></a>
-      <a href="Images/r6.jpeg" data-lightbox="roofing"><img src="Images/r6.jpeg" alt="Roofing project 6"></a>
-     <a href="Images/r7.jpeg" data-lightbox="roofing"><img src="Images/r7.jpeg" alt="Roofing project 7"></a>
-     </div>
-     </section>
+  <h2 id="roofing-gallery">Roofing Projects</h2>
+  <p><a href="Images/r1.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project">View Shingle Roof Project</a></p>
+
+  <!-- Hidden Lightbox preload links -->
+  <a href="Images/r2.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
+  <a href="Images/r3.jpg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
+  <a href="Images/r4.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
+  <a href="Images/r5.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
+  <a href="Images/r6.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
+  <a href="Images/r7.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
+</section>
+
 
     <p style="text-align: center; margin-top: 20px;">
     <a href="Roofing.html" class="button">
