--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,10 @@
 <h2>Send Us a Message</h2>
 <form class="contact-form" action="#" method="post">
   <label for="name">Name: <span style="color: red;">*</span></label>
-  <input type="text" id="name" name="name" required />
+  <input type="text" id="name" name="name" required style="width: 300px;" />
 
   <label for="phone">Phone Number: <span style="color: red;">*</span></label>
-  <input type="tel" id="phone" name="phone" required />
+  <input type="tel" id="phone" name="phone" required style="width: 200px;" />
 
   <label for="work-type">Type of Work: <span style="color: red;">*</span></label>
   <select id="work-type" name="work-type" required>
@@ -59,6 +59,19 @@
   <select id="subservice" name="subservice" required style="display: none;">
     <option value="">-- Select a type of work first --</option>
   </select>
+
+<label for="timeline">When do you need this work done?</label>
+<select id="timeline" name="timeline">
+  <option value="">-- Select --</option>
+  <option value="asap">As soon as possible</option>
+  <option value="this-month">This month</option>
+  <option value="next-month">Next month</option>
+  <option value="1-3-months">In 1–3 months</option>
+  <option value="not-sure">Not sure</option>
+</select>
+
+<label for="zipcode">Job ZIP Code: <span style="color: red;">*</span></label>
+<input type="text" id="zipcode" name="zipcode" pattern="\d{5}" maxlength="5" placeholder="e.g. 10472" required style="width: 100px;" />
 
   <label for="message">Message:</label>
   <textarea id="message" name="message" rows="5"></textarea>
